refactor(backend): migrar para arquitetura de container compartilhado e flags protegidas
Reestrutura o backend para utilizar uma arquitetura baseada em container
compartilhado, simplificando a infraestrutura dos desafios e fortalecendo a
segurança do processo de submissão de flags.

* Remove a dependência `docker-java` e o `ChallengeActivationService`
* Substitui os campos `dockerImage` e `flag` por `slug` e `flagHash`
* Adiciona a entidade `SolvedChallenge` com restrição única por usuário e desafio
* Armazena flags como hash e realiza validação sem expor valores originais
* Adiciona endpoint de consulta de status dos desafios
* Introduz DTOs seguros para evitar exposição de senhas e hashes
* Corrige a configuração de CORS, incluindo suporte a preflight requests
* Externaliza segredos e configurações para variáveis de ambiente