@@ -3,6 +3,7 @@ package com.unihack.unihack.configs;
 import com.unihack.unihack.configs.security.JwtAuthenticationFilter;
 import com.unihack.unihack.enums.UserRole;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -19,7 +20,9 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -29,9 +32,12 @@ public class SecurityConfig {
     @Autowired
     private JwtAuthenticationFilter jwtAuthenticationFilter;
 
+    @Value("${cors.allowed-origins}")
+    private String allowedOrigins;
+
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
-        return authenticationConfiguration.getAuthenticationManager();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 
     @Bean
@@ -41,30 +47,24 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(requests -> requests
-                        // Endpoints públicos
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/auth/register").permitAll()
                         .requestMatchers(HttpMethod.POST, "/auth/login").permitAll()
                         .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
 
-                        // --- ALTERAÇÃO APLICADA AQUI ---
-                        // Rota do ranking corrigida e tornada pública.
-                        .requestMatchers(HttpMethod.GET, "/api/users/ranking").permitAll()
-
-                        // Endpoints que precisam de autenticação
                         .requestMatchers(HttpMethod.GET, "/challenges", "/challenges/all").authenticated()
-                        .requestMatchers(HttpMethod.GET, "/api/users/me/profile").authenticated()
-                        .requestMatchers("/users/me").authenticated() // Mantido caso esteja em uso
-
-                        // Regras por Role (Mantidas como estavam)
-                        .requestMatchers(HttpMethod.GET, "/challenges/details/**").hasRole(UserRole.USER.name())
+                        .requestMatchers(HttpMethod.GET, "/challenges/details/**").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/challenges/*/status").authenticated()
                         .requestMatchers(HttpMethod.POST, "/challenges/create").hasRole(UserRole.ADMIN.name())
                         .requestMatchers(HttpMethod.PUT, "/challenges/update/**").hasRole(UserRole.ADMIN.name())
                         .requestMatchers(HttpMethod.DELETE, "/challenges/delete/**").hasRole(UserRole.ADMIN.name())
+
+                        .requestMatchers(HttpMethod.GET, "/users/ranking").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/users/me").authenticated()
                         .requestMatchers(HttpMethod.GET, "/users/**").hasRole(UserRole.ADMIN.name())
                         .requestMatchers(HttpMethod.PUT, "/users/**").hasRole(UserRole.ADMIN.name())
                         .requestMatchers(HttpMethod.DELETE, "/users/**").hasRole(UserRole.ADMIN.name())
 
-                        // Default: qualquer outra requisição precisa estar autenticada
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -80,9 +80,9 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+        configuration.setAllowedOriginPatterns(Arrays.asList(allowedOrigins.split(",")));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
